--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
 
     <!-- About Fragment strings -->
     <string name="mdg_description">An Active students group at IIT Roorkee directed towards developing useful applications</string>
-    <string name="share_application_text">Check out MusicDNA an awesome music player from Play Store. Link: </string>
-    <string name="music_dna_short_link">http://bit.ly/musicDnaApp</string>
-    <string name="license_text">MusicDNA and related material are distributed under \'Attribution-NonCommercial-ShareAlike 4.0 International license\' a copy of which can be obtained from https://github.com/harjot-oberai/MusicDNA/blob/master/LICENSE.md</string>
-    <string name="license_link">https://github.com/harjot-oberai/MusicDNA/blob/master/LICENSE.md</string>
+    <string name="share_application_text">Check out trianglify a library to generate beautiful view for Android. Link: </string>
+    <string name="trianglify_store_short_link">http://bit.ly/musicDnaApp</string>
+    <string name="license_text">Trianglify library and related material are distributed under \'MIT license\' a copy of which can be obtained from link provided.</string>
+    <string name="license_link">https://github.com/sdsmdg/trianglify/blob/develop/LICENSE.md</string>
 </resources>
