References hard coded strings to string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,16 @@
 <resources>
     <string name="app_name">Trianglify Demo</string>
-
+    <string name="app_title">Trianglify</string>
+    <string name="version_no">Version 1.1.0</string>
+    <string name="dev_text">developed by</string>
+    <string name="license">View license</string>
+    <string name="variance_option">Variance:&#160;</string>
+    <string name="cell_size_option">Cell Size:&#160;</string>
+    <string name="palette_option">Palette:&#160;</string>
+    <string name="random_colouring_option">Random Coloring</string>
+    <string name="custom_palette_option">Custom Palette</string>
+    <string name="draw_strokes_option">Draw Strokes</string>
+    <string name="fill_triangles_option">Fill Triangles</string>
 
     <!-- About Fragment strings -->
     <string name="mdg_description">An Active students group at IIT Roorkee directed towards developing useful applications</string>
