--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="about_toolbar_menu_refresh">Refresh</string>
     <string name="about_toolbar_menu_cust_palette_picker">Custom palette picker</string>
     <string name="about_toolbar_menu_about">About</string>
+    <string name="about_toolbar_menu_set_wallpaper">Set wallpaper</string>
 </resources>
